<resources>
    <string name="app_name">Zentrip</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Network Errors-->
    <string name="networkError">Oh! You are not connected to a wifi or cellular data network. Please connect and try again</string>
    <string name="networkErrorCode">NO_INTERNET_CONNECTION</string>
    <string name="unknownError">Something went wrong!</string>

    <string name="requestTimeOutError">Oooops! We couldn’t capture your request in time. Please try again.</string>

    <string name="errorCodeMalformedJson">MALFORMED_JSON</string>
    <string name="responseMalformedJson">Oops! We hit an error. Try again later.</string>
    <string name="search">Search</string>
    <string name="bookings">Bookings</string>
    <string name="account">Account</string>
    <string name="more">More</string>
    <string name="Password">Password</string>
    <string name="link_forgetpassword">Forget Password?</string>

    <!-- Login -->
    <string name="login_txt_login">Identifiant</string>
    <string name="login_txt_password">Mot de passe</string>
    <string name="login_txt_show_password">Afficher le mot de passe</string>
    <string name="login_txt_http_request_failure">Erreur HTTP lors de l\'authentification.</string>
    <string name="login_txt_login_error">Erreur lors de l\'authentification, veuillez réessayer ultérieurement.</string>
    <string name="login_txt_show_password_description">Afficher le mot de passe</string>
    <string name="login_txt_aborted_login">Tentative de connexion annulée</string>
    <string name="login_txt_unknown_error">Une erreur est survenue.</string>
    <string name="login_txt_network_error">Authentification impossible, il y a un problème de connexion au réseau.</string>
    <string name="login_txt_service_error">Authentification impossible, le service est indisponible. Veuillez réessayer ultérieurement.</string>
    <string name="login_txt_multiple_error">Authentification impossible, plusieurs erreurs sont survenues.</string>
    <string name="login_txt_invalid_user_error">Authentification impossible, l\'identifiant et / ou le mot de passe sont invalides.</string>
    <string name="login_txt_username_required">Un identifiant est obligatoire</string>
    <string name="login_txt_password_required">Un mot de passe est obligatoire</string>
    <string name="login_txt_validate_description">Se connecter</string>
    <string name="loading">Loading...</string>
    <string name="but_done">Done</string>
    <string name="title_tab_start_date">Date Départ</string>
    <string name="ttile_tab_end_date">Date Retour</string>
    <string name="sign_in">Sign In</string>
    <string name="townFrom">Ville Départ</string>
    <string name="name">Ville Arrivée</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="phone">Phone</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="check_your_network_connection">Check Connection</string>
    <string name="reload">Reload</string>
</resources>
