<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            style="@style/TextCardViewBold"
            android:text="Réservez une voiture pour votre séjour au Cameroun" />


        <TextView
            style="@style/TextCardViewBold"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_dateDebut"
                style="@style/CardViewStyle"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                card:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:padding="8dp">

                    <TextView
                        android:id="@+id/dateDebut"
                        style="@style/TextCardView"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_date_range_black_24dp"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        android:text="20 Jan 2018" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_dateFin"
                style="@style/CardViewStyle"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                card:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/dateFin"
                        style="@style/TextCardView"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_date_range_black_24dp"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        android:text="24 Fev 2018" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <AutoCompleteTextView
                android:id="@+id/townFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/townFrom"
                android:imeOptions="actionNext"
                android:inputType="" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <AutoCompleteTextView
                android:id="@+id/townTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_booking"
            style="@style/ButttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>